@@ -107,7 +107,11 @@ public class BidService {
 
         List<Bid> bids = bidRepository.findAllByAuctionOrderByCreatedAtDesc(auction);
 
-        return bids.stream().map(this::mapToResponseDto).toList();
+        return bids.stream()
+                .filter(bid -> bid.getStatus() == BidStatus.PENDING ||
+                        bid.getStatus() == BidStatus.FAILED)
+                .map(this::mapToResponseDto)
+                .toList();
     }
 
 
@@ -147,7 +151,9 @@ public class BidService {
                 bid.getDepositAmount(),
                 bid.getStatus(),
                 bid.getDepositStatus(),
-                bid.getUser().getProfileImageUrl()
+                bid.getUser().getProfileImageUrl(),
+                bid.getUser().getNickname(),
+                bid.getCreatedAt()
         );
     }
 
@@ -179,16 +185,22 @@ public class BidService {
 
             Long winnerId = auction.getWinner() != null ? auction.getWinner().getId() : null;
             AuctionStatus auctionStatus = auction.getStatus();
+            PaymentStatus paymentStatus = auction.getPaymentStatus();
 
             boolean isEnded = auctionStatus != AuctionStatus.IN_PROGRESS;
             boolean isMineWinner = winnerId != null && winnerId.equals(userId);
+
+            if (isMineWinner && paymentStatus == PaymentStatus.COMPLETED) {
+                return;
+            }
 
             if (isEnded && isMineWinner) {
                 WonItemResponseDto won = new WonItemResponseDto(
                         auctionId,
                         goodsName,
                         price,
-                        imageUrl
+                        imageUrl,
+                        bid.getCreatedAt()
                 );
                 wonItems.add(won);
             } else {
@@ -199,7 +211,9 @@ public class BidService {
                         goodsName,
                         price,
                         imageUrl,
-                        status
+                        status,
+                        bid.getCreatedAt(),
+                        auction.getEndAt()
                 );
                 bidItems.add(bidItem);
             }
@@ -211,6 +225,6 @@ public class BidService {
         if (auction.getImages() == null || auction.getImages().isEmpty()) {
             return null;
         }
-        return auction.getImages().get(0).getImageUrl();
+        return auction.getImages().getFirst().getImageUrl();
     }
 }
